install/jx-demo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jx-demo
  namespace: default
spec:
  rules:
    - host: jx-demo.devopsman.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jx-demo
                port:
                  number: 80
