install/sonarqube-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
spec:
  rules:
    - host: sonarqube.devopsman.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: sonarqube-dce-sonarqube-dce
                port:
                  number: 9000
